gen/24.3/metrics/metrics.adoc
=== redpanda_application_build

Redpanda build information

*Type*: gauge

=== redpanda_application_fips_mode

Identifies whether or not Redpanda is running in FIPS mode.

*Type*: gauge

=== redpanda_application_uptime_seconds_total

Redpanda uptime in seconds

*Type*: gauge

=== redpanda_authorization_result

Total number of authorization results by type

*Type*: counter

=== redpanda_cloud_client_backoff

Total number of requests that backed off

*Type*: counter

=== redpanda_cloud_client_client_pool_utilization

Utilization of the cloud storage pool(0 - unused, 100 - fully utilized)

*Type*: gauge

=== redpanda_cloud_client_download_backoff

Total number of download requests that backed off

*Type*: counter

=== redpanda_cloud_client_downloads

Total number of requests that downloaded an object from cloud storage

*Type*: counter

=== redpanda_cloud_client_lease_duration

Lease duration histogram

*Type*: histogram

=== redpanda_cloud_client_not_found

Total number of requests for which the object was not found

*Type*: counter

=== redpanda_cloud_client_num_borrows

Number of time current shard had to borrow a cloud storage client from another shard

*Type*: counter

=== redpanda_cloud_client_upload_backoff

Total number of upload requests that backed off

*Type*: counter

=== redpanda_cloud_client_uploads

Total number of requests that uploaded an object to cloud storage

*Type*: counter

=== redpanda_cloud_storage_active_segments

Number of remote log segments currently hydrated for read

*Type*: gauge

=== redpanda_cloud_storage_anomalies

Count of missing partition manifest anomalies for the topic

*Type*: gauge

=== redpanda_cloud_storage_cache_op_hit

Number of get requests for objects that are already in cache.

*Type*: counter

=== redpanda_cloud_storage_cache_op_in_progress_files

Number of files that are being put to cache.

*Type*: gauge

=== redpanda_cloud_storage_cache_op_miss

Number of failed get requests because of missing object in the cache.

*Type*: counter

=== redpanda_cloud_storage_cache_op_put

Number of objects written into cache.

*Type*: counter

=== redpanda_cloud_storage_cache_space_files

Number of objects in cache.

*Type*: gauge

=== redpanda_cloud_storage_cache_space_hwm_files

High watermark of number of objects in cache.

*Type*: gauge

=== redpanda_cloud_storage_cache_space_hwm_size_bytes

High watermark of sum of size of cached objects.

*Type*: gauge

=== redpanda_cloud_storage_cache_space_size_bytes

Sum of size of cached objects.

*Type*: gauge

=== redpanda_cloud_storage_cache_space_tracker_size

Number of entries in cache access tracker

*Type*: gauge

=== redpanda_cloud_storage_cache_space_tracker_syncs

Number of times the access tracker was updated with cache disk data

*Type*: counter

=== redpanda_cloud_storage_cache_trim_carryover_trims

Number of times we invoked carryover trim.

*Type*: counter

=== redpanda_cloud_storage_cache_trim_exhaustive_trims

Number of times we couldn't free enough space with a fast trim and had to fall back to a slower exhaustive trim.

*Type*: counter

=== redpanda_cloud_storage_cache_trim_failed_trims

Number of times could not free the expected amount of space, indicating possible bug or configuration issue.

*Type*: counter

=== redpanda_cloud_storage_cache_trim_fast_trims

Number of times we have trimmed the cache using the normal (fast) mode.

*Type*: counter

=== redpanda_cloud_storage_cache_trim_in_mem_trims

Number of times we trimmed the cache using the in-memory access tracker.

*Type*: counter

=== redpanda_cloud_storage_cloud_log_size

Total size in bytes of the user-visible log for the topic

*Type*: gauge

=== redpanda_cloud_storage_deleted_segments

Number of segments that have been deleted from S3 for the topic. This may grow due to retention or non compacted segments being replaced with their compacted equivalent.

*Type*: counter

=== redpanda_cloud_storage_errors_total

Number of transmit errors

*Type*: counter

=== redpanda_cloud_storage_housekeeping_drains

Number of times upload housekeeping queue was drained

*Type*: gauge

=== redpanda_cloud_storage_housekeeping_jobs_completed

Number of executed housekeeping jobs

*Type*: counter

=== redpanda_cloud_storage_housekeeping_jobs_failed

Number of failed housekeeping jobs

*Type*: counter

=== redpanda_cloud_storage_housekeeping_jobs_skipped

Number of skipped housekeeping jobs

*Type*: counter

=== redpanda_cloud_storage_housekeeping_pauses

Number of times upload housekeeping was paused

*Type*: gauge

=== redpanda_cloud_storage_housekeeping_requests_throttled_average_rate

Average rate of requests from the read and write path which were throttled by tiered storage (per shard)

*Type*: gauge

=== redpanda_cloud_storage_housekeeping_resumes

Number of times upload housekeeping was resumed

*Type*: gauge

=== redpanda_cloud_storage_housekeeping_rounds

Number of upload housekeeping rounds

*Type*: counter

=== redpanda_cloud_storage_jobs_cloud_segment_reuploads

Number of segment reuploads from cloud storage sources (cloud storage cache or direct download from cloud storage)

*Type*: gauge

=== redpanda_cloud_storage_jobs_local_segment_reuploads

Number of segment reuploads from local data directory

*Type*: gauge

=== redpanda_cloud_storage_jobs_manifest_reuploads

Number of manifest reuploads performed by all housekeeping jobs

*Type*: gauge

=== redpanda_cloud_storage_jobs_metadata_syncs

Number of archival configuration updates performed by all housekeeping jobs

*Type*: gauge

=== redpanda_cloud_storage_jobs_segment_deletions

Number of segments deleted by all housekeeping jobs

*Type*: gauge

=== redpanda_cloud_storage_limits_downloads_throttled_sum

Total amount of time downloads were throttled (ms)

*Type*: counter

=== redpanda_cloud_storage_partition_manifest_uploads_total

Successful partition manifest uploads

*Type*: counter

=== redpanda_cloud_storage_partition_readers

Number of partition reader instances (number of current fetch/timequery requests reading from tiered storage)

*Type*: gauge

=== redpanda_cloud_storage_partition_readers_delayed

How many partition reades were delayed due to hitting reader limit. This indicates cluster is saturated with tiered storage reads.

*Type*: counter

=== redpanda_cloud_storage_readers

Number of segment read cursors for hydrated remote log segments

*Type*: gauge

=== redpanda_cloud_storage_segment_index_uploads_total

Successful segment index uploads

*Type*: counter

=== redpanda_cloud_storage_segment_materializations_delayed

How many segment materializations were delayed due to hitting reader limit. This indicates cluster is saturated with tiered storage reads.

*Type*: counter

=== redpanda_cloud_storage_segment_readers_delayed

How many segment readers were delayed due to hitting reader limit. This indicates cluster is saturated with tiered storage reads.

*Type*: counter

=== redpanda_cloud_storage_segment_uploads_total

Successful data segment uploads

*Type*: counter

=== redpanda_cloud_storage_segments

Total number of accounted segments in the cloud for the topic

*Type*: gauge

=== redpanda_cloud_storage_segments_pending_deletion

Total number of segments pending deletion from the cloud for the topic

*Type*: gauge

=== redpanda_cloud_storage_spillover_manifest_uploads_total

Successful spillover manifest uploads

*Type*: counter

=== redpanda_cloud_storage_spillover_manifests_materialized_bytes

Bytes of memory used for spilled manifests currently cached in memory

*Type*: gauge

=== redpanda_cloud_storage_spillover_manifests_materialized_count

How many spilled manifests are currently cached in memory

*Type*: gauge

=== redpanda_cloud_storage_uploaded_bytes

Total number of uploaded bytes for the topic

*Type*: counter

=== redpanda_cluster_brokers

Number of configured brokers in the cluster

*Type*: gauge

=== redpanda_cluster_controller_log_limit_requests_available_rps

Controller log rate limiting. Available rps for group

*Type*: gauge

=== redpanda_cluster_controller_log_limit_requests_dropped

Controller log rate limiting. Amount of requests that are dropped due to exceeding limit in group

*Type*: counter

=== redpanda_cluster_features_enterprise_license_expiry_sec

Number of seconds remaining until the Enterprise license expires

*Type*: gauge

=== redpanda_cluster_members_backend_queued_node_operations

Number of queued node operations

*Type*: gauge

=== redpanda_cluster_non_homogenous_fips_mode

Number of nodes that have a non-homogenous FIPS mode value

*Type*: gauge

=== redpanda_cluster_partition_moving_from_node

Amount of partitions that are moving from node

*Type*: gauge

=== redpanda_cluster_partition_moving_to_node

Amount of partitions that are moving to node

*Type*: gauge

=== redpanda_cluster_partition_node_cancelling_movements

Amount of cancelling partition movements for node

*Type*: gauge

=== redpanda_cluster_partition_num_with_broken_rack_constraint

Number of partitions that don't satisfy the rack awareness constraint

*Type*: gauge

=== redpanda_cluster_partitions

Number of partitions in the cluster (replicas not included)

*Type*: gauge

=== redpanda_cluster_topics

Number of topics in the cluster

*Type*: gauge

=== redpanda_cluster_unavailable_partitions

Number of partitions that lack quorum among replicants

*Type*: gauge

=== redpanda_cpu_busy_seconds_total

Total CPU busy time in seconds

*Type*: gauge

=== redpanda_debug_bundle_failed_generation_count

Running count of failed debug bundle generations

*Type*: counter

=== redpanda_debug_bundle_last_failed_bundle_timestamp_seconds

Timestamp of last failed debug bundle generation (seconds since epoch)

*Type*: gauge

=== redpanda_debug_bundle_last_successful_bundle_timestamp_seconds

Timestamp of last successful debug bundle generation (seconds since epoch)

*Type*: gauge

=== redpanda_debug_bundle_successful_generation_count

Running count of successful debug bundle generations

*Type*: counter

=== redpanda_io_queue_total_read_ops

Total read operations passed in the queue

*Type*: counter

=== redpanda_io_queue_total_write_ops

Total write operations passed in the queue

*Type*: counter

=== redpanda_kafka_handler_latency_seconds

Latency histogram of kafka requests

*Type*: histogram

=== redpanda_kafka_max_offset

Latest readable offset of the partition (i.e. high watermark)

*Type*: gauge

=== redpanda_kafka_partitions

Configured number of partitions for the topic

*Type*: gauge

=== redpanda_kafka_quotas_client_quota_throttle_time

Client quota throttling delay per rule and quota type (in seconds)

*Type*: histogram

=== redpanda_kafka_quotas_client_quota_throughput

Client quota throughput per rule and quota type

*Type*: histogram

=== redpanda_kafka_records_fetched_total

Total number of records fetched

*Type*: counter

=== redpanda_kafka_records_produced_total

Total number of records produced

*Type*: counter

=== redpanda_kafka_replicas

Configured number of replicas for the topic

*Type*: gauge

=== redpanda_kafka_request_bytes_total

Total number of bytes produced per topic

*Type*: counter

=== redpanda_kafka_request_latency_seconds

Internal latency of kafka produce requests

*Type*: histogram

=== redpanda_kafka_rpc_sasl_session_expiration_total

Total number of SASL session expirations

*Type*: counter

=== redpanda_kafka_rpc_sasl_session_reauth_attempts_total

Total number of SASL reauthentication attempts

*Type*: counter

=== redpanda_kafka_rpc_sasl_session_revoked_total

Total number of SASL sessions revoked

*Type*: counter

=== redpanda_kafka_under_replicated_replicas

Number of under replicated replicas (i.e. replicas that are live, but not at the latest offest)

*Type*: gauge

=== redpanda_memory_allocated_memory

Allocated memory size in bytes

*Type*: gauge

=== redpanda_memory_available_memory

Total shard memory potentially available in bytes (free_memory plus reclaimable)

*Type*: gauge

=== redpanda_memory_available_memory_low_water_mark

The low-water mark for available_memory from process start

*Type*: gauge

=== redpanda_memory_free_memory

Free memory size in bytes

*Type*: gauge

=== redpanda_node_status_rpcs_received

Number of node status RPCs received by this node

*Type*: gauge

=== redpanda_node_status_rpcs_sent

Number of node status RPCs sent by this node

*Type*: gauge

=== redpanda_node_status_rpcs_timed_out

Number of timed out node status RPCs from this node

*Type*: gauge

=== redpanda_raft_leadership_changes

Number of won leader elections across all partitions in given topic

*Type*: counter

=== redpanda_raft_learners_gap_bytes

Total numbers of bytes that must be delivered to learners

*Type*: gauge

=== redpanda_raft_recovery_offsets_pending

Sum of offsets that partitions on this node need to recover.

*Type*: gauge

=== redpanda_raft_recovery_partition_movement_available_bandwidth

Bandwidth available for partition movement. bytes/sec

*Type*: gauge

=== redpanda_raft_recovery_partition_movement_consumed_bandwidth

Bandwidth consumed for partition movement. bytes/sec

*Type*: gauge

=== redpanda_raft_recovery_partitions_active

Number of partition replicas are currently recovering on this node.

*Type*: gauge

=== redpanda_raft_recovery_partitions_to_recover

Number of partition replicas that have to recover for this node.

*Type*: gauge

=== redpanda_rest_proxy_inflight_requests_memory_usage_ratio

Memory usage ratio of in-flight requests in the rest_proxy

*Type*: gauge

=== redpanda_rest_proxy_inflight_requests_usage_ratio

Usage ratio of in-flight requests in the rest_proxy

*Type*: gauge

=== redpanda_rest_proxy_queued_requests_memory_blocked

Number of requests queued in rest_proxy, due to memory limitations

*Type*: gauge

=== redpanda_rest_proxy_request_errors_total

Total number of rest_proxy server errors

*Type*: counter

=== redpanda_rest_proxy_request_latency_seconds

Internal latency of request for rest_proxy

*Type*: histogram

=== redpanda_rpc_active_connections

Count of currently active connections

*Type*: gauge

=== redpanda_rpc_received_bytes

internal: Number of bytes received from the clients in valid requests

*Type*: counter

=== redpanda_rpc_request_errors_total

Number of rpc errors

*Type*: counter

=== redpanda_rpc_request_latency_seconds

RPC latency

*Type*: histogram

=== redpanda_rpc_sent_bytes

internal: Number of bytes sent to clients

*Type*: counter

=== redpanda_scheduler_runtime_seconds_total

Accumulated runtime of task queue associated with this scheduling group

*Type*: counter

=== redpanda_schema_registry_cache_schema_count

The number of schemas in the store

*Type*: gauge

=== redpanda_schema_registry_cache_schema_memory_bytes

The memory usage of schemas in the store

*Type*: gauge

=== redpanda_schema_registry_cache_subject_count

The number of subjects in the store

*Type*: gauge

=== redpanda_schema_registry_cache_subject_version_count

The number of versions in the subject

*Type*: gauge

=== redpanda_schema_registry_inflight_requests_memory_usage_ratio

Memory usage ratio of in-flight requests in the schema_registry

*Type*: gauge

=== redpanda_schema_registry_inflight_requests_usage_ratio

Usage ratio of in-flight requests in the schema_registry

*Type*: gauge

=== redpanda_schema_registry_queued_requests_memory_blocked

Number of requests queued in schema_registry, due to memory limitations

*Type*: gauge

=== redpanda_schema_registry_request_errors_total

Total number of schema_registry server errors

*Type*: counter

=== redpanda_schema_registry_request_latency_seconds

Internal latency of request for schema_registry

*Type*: histogram

=== redpanda_security_audit_errors_total

Running count of errors in creating/publishing audit event log entries

*Type*: counter

=== redpanda_security_audit_last_event_timestamp_seconds

Timestamp of last successful publish on the audit log (seconds since epoch)

*Type*: counter

=== redpanda_storage_cache_disk_free_bytes

Disk storage bytes free.

*Type*: gauge

=== redpanda_storage_cache_disk_free_space_alert

Status of low storage space alert. 0-OK, 1-Low Space 2-Degraded

*Type*: gauge

=== redpanda_storage_cache_disk_total_bytes

Total size of attached storage, in bytes.

*Type*: gauge

=== redpanda_storage_disk_free_bytes

Disk storage bytes free.

*Type*: gauge

=== redpanda_storage_disk_free_space_alert

Status of low storage space alert. 0-OK, 1-Low Space 2-Degraded

*Type*: gauge

=== redpanda_storage_disk_total_bytes

Total size of attached storage, in bytes.

*Type*: gauge

=== redpanda_wasm_binary_executable_memory_usage

The amount of executable memory used for WebAssembly binaries

*Type*: gauge

